# ContoCorrenteProject

./: CMakeLists.txt  main.cpp
include/: ContoCorrente.h  Transazione.h
src/: ContoCorrente.cpp  Transazione.cpp
test/: TestConto.cpp  TestTransazione.cpp
